Mon May 14 12:35:30 CEST 2001 <Daniel.Veillard@imag.fr>

	* configure.in: releasing 1.8.13 fixing the two previous bugs

Sat May  5 18:32:22 CEST 2001 <Daniel.Veillard@imag.fr>

	* entities.c: fixed a possible NULL pointer deref introduced on
	  the last change (Gediminas Paulauskas) and clean up a couple other
	  mistakes

Sat May  5 11:38:44 CEST 2001 <Daniel.Veillard@imag.fr>

	* entities.c tree.c parser.c: fix a problem raised after 1.8.12
	  non-utf document parsed with the old parser are not saved correctly
	  force the UTF-8 encoding label on the new parser to detect it

Fri May  4 08:53:41 CEST 2001 <Daniel.Veillard@imag.fr>

	* doc/xml.html: updated
	* doc/html/*: rebuilt the docs

Tue Mar 27 00:50:04 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* parser.c: fixed line number reporting on error

Mon Mar 26 23:20:36 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* parser.c parserold.c: Sullivan and Darin found a parser bug,
	  applied the patch.

Mon Mar 26 09:51:40 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* parserold.c : reapplied bug 52299 fix

Sun Mar 25 16:56:27 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* parser.c: fixed an I18N breakage on the new parser due
	  to the usage of an old routine
	* test/i18n.xml result/i18n.xml: added a small first test

Sun Mar 25 16:07:08 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* parser.c: cleanup and make sure scrollkeeper won't have problems

Sun Mar 25 01:40:24 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* parser.c: initialization code must be run before deciding
	  which parser to launch.

Sun Mar 25 01:03:10 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* Makefile.am parserold.c: added back the 1.8.11 parser for
	  compatibility
	* README: updated
	* SAX.c: integrate back 1.8.11 callback code and call it when
	  we are using the old parser
	* entities.c: fixed a small problem
	* parser.[ch]: allow to use either parser, add xmlUseNewParser(),